@@ -13,7 +13,7 @@ Second Edition, Sage, forthcoming.
 \tabular{ll}{
 Package: \tab car\cr
 Version: \tab 2.0-7\cr
-Date: \tab 2010/11/14\cr
+Date: \tab 2010/11/18\cr
 Depends: \tab R (>= 2.1.1), stats, graphics, MASS, nnet, survival\cr
 Suggests: \tab alr3, leaps, lmtest, sandwich, mgcv, rgl\cr
 License: \tab GPL (>= 2)\cr
