@@ -1,6 +1,8 @@
 Changes to Version 2.0-7
 
 	o  added fill and fill.alpha arguments to ellipse, etc., for translucent filled ellipses (suggested by Michael Friendly).
+	
+	o  fixed bug in recode, when a legitimate string includes the characters "else" (reported by Gustaf Rydevik).
 
 Changes to Version 2.0-6
 
